Rename DataLoader to DataManager and add missing documentation

--- a/HostsEditor/HostsEditor.csproj
+++ b/HostsEditor/HostsEditor.csproj
@@ -70,7 +70,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataLoader.cs" />
+    <Compile Include="DataManager.cs" />
     <Compile Include="HostRow.cs" />
     <Compile Include="MainWindow.cs">
       <SubType>Form</SubType>
