--- a/HostsEditorTests/HostsEditorTests.csproj
+++ b/HostsEditorTests/HostsEditorTests.csproj
@@ -53,7 +53,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="DataLoaderTests.cs" />
+    <Compile Include="DataManagerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
