Add WebClient with editable timeout value
- used to prevent hanging when unable to connect to GitHub releases page

--- a/HostsEditor/HostsEditor.csproj
+++ b/HostsEditor/HostsEditor.csproj
@@ -89,6 +89,9 @@
       <DependentUpon>EditHostWindow.cs</DependentUpon>
     </Compile>
     <Compile Include="HostRow.cs" />
+    <Compile Include="LimitableWebClient.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="MainWindow.cs">
       <SubType>Form</SubType>
     </Compile>
